[gd_scene load_steps=2 format=1]

[ext_resource path="res://game/lobby/elements/arena/arena.gd" type="Script" id=1]

[node name="arena" type="Node2D"]

script/script = ExtResource( 1 )

[node name="listener" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[connection signal="input_event" from="listener" to="." method="_on_listener_input_event"]

[connection signal="mouse_enter" from="listener" to="." method="_on_listener_mouse_enter"]

[connection signal="mouse_exit" from="listener" to="." method="_on_listener_mouse_exit"]


